test/e2e/testdata/httproute-with-dynamic-resolver-backend-with-tls-system-ca.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-with-dynamic-resolver-backend-tls-system-trust-store
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - backendRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: backend-dynamic-resolver-tls-system-trust-store
    matches:
    - path:
        type: PathPrefix
        value: /with-tls-system-trust-store
    filters:
    - type: URLRewrite  # rewrite the path to /, as we use gateway.envoyproxy.io to test the dynamic resolver, and this path is not available
      urlRewrite:
        path:
          type: ReplaceFullPath
          replaceFullPath: /
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: Backend
metadata:
  name: backend-dynamic-resolver-tls-system-trust-store
  namespace: gateway-conformance-infra
spec:
  type: DynamicResolver
  tls:
    wellKnownCACertificates: System
